k8s/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-controller
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      serviceAccountName: jenkins-controller
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk17
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
            - name: agent
              containerPort: 50000
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 90
            periodSeconds: 30
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: security-config
              mountPath: /usr/share/jenkins/ref/init.groovy.d
              readOnly: true
            - name: security-config
              mountPath: /var/jenkins_home/init.groovy.d/01-security.groovy
              subPath: 01-security.groovy
              readOnly: true
            - name: security-config
              mountPath: /var/jenkins_home/init.groovy.d/02-kubernetes-cloud.groovy
              subPath: 02-kubernetes-cloud.groovy
              readOnly: true
            - name: security-config
              mountPath: /var/jenkins_home/init.groovy.d/03-smtp.groovy
              subPath: 03-smtp.groovy
              readOnly: true
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
        - name: plugin-catalog
          configMap:
            name: jenkins-plugin-catalog
            items:
              - key: plugins.txt
                path: plugins.txt
        - name: security-config
          configMap:
            name: jenkins-security-config
