k8s/jenkins/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: jenkins
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: jenkins
  labels:
    app: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: smtp
    - name: http
      port: 8025
      targetPort: http
