k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: agent
      port: 50000
      targetPort: agent
  selector:
    app: jenkins
